# ai-prompt-ctf

./: .bandit  .coverage  .dockerignore  .flake8  .gitignore  ADK_INTEGRATION.md  CHALLENGES.MD  DOCKER.md  Dockerfile  Dockerfile.adk  Dockerfile.frontend  LICENSE  Makefile  Modelfile  README.MD  TODO.md  app.py  app_config.py  create_vecs_indexes.py  db.py  docker-compose.yml  llm_guard.py  main.py  nginx-ctf-frontend.conf  nginx-fastapi.conf  password_upload.py  password_upload_docs.py  protections.py  pyproject.toml  schemas.py  search.py  supervisord.conf  test.py  test_script.py  test_vectorstore.py  users.py  utils.py
.cursor/rules/: python-uv.mdc
.github/: build_docker.yml  dependabot.yml
.github/workflows/: build_docker.yml  ci.yml
ctf/: CHALLENGES.MD  Dockerfile  FAQ.MD  __init__.py  app.py  app_config.py  embeddings.py  leaderboard.py  main.py  memory.py  prepare_flags.py  prepare_hf_models.py  run_agent_sdk.py  run_mem0.py  run_openai_sdk.py  utils.py
ctf/agent/: __init__.py  agent.py  search.py  system_prompt.py  test_functions.evalset.json  tools.py  utils.py
ctf/agents/: ADK_WEB_README.md  README.md  __init__.py  adk_eval_config.json  agent.py  agent_factory.py  base_agent.py  example_usage.py  level_0_agent.py  level_10_agent.py  level_1_agent.py  level_2_agent.py  level_3_agent.py  level_4_agent.py  level_5_agent.py  level_6_agent.py  level_7_agent.py  level_8_agent.py  level_9_agent.py  main.py  model.py  system_prompt.py  tools.py
ctf/agents/ctf/agents/evaluations/: README.md  level_0_password_test.test.json  level_1_password_test.test.json  level_2_password_test.test.json  level_4_password_test.test.json  level_7_password_test.test.json  level_9_password_test.test.json  test_config.json
ctf/agents/eval/: test_transfer_and_basic_agents.evalset.json
ctf/agents/evaluations/: README.md  ctf_password_tests.evalset.json  level_10_password_test.test.json  level_3_password_test.test.json  level_5_password_test.test.json  level_6_password_test.test.json  level_8_password_test.test.json  run_evaluations.sh  test_password_queries.py
ctf/agents/rag_agent/: __init__.py  agent.py  tools.py
ctf/agents/sub_agents/: __init__.py  agent.py  base_agent.py  eval_level0_to_1_block.evalset.json  guard_rails.py  leaderboard_agent.py  level1_retrieve_answer.evalset.json  level_0_agent.py  level_10_agent.py  level_1_agent.py  level_2_agent.py  level_3_agent.py  level_4_agent.py  level_5_agent.py  level_6_agent.py  level_7_agent.py  level_8_agent.py  level_9_agent.py  protection_utils.py  system_prompt.py  tools.py  transfer_agent.py
ctf/agents/sub_agents/.adk/eval_history/: sub_agents_eval_level0_to_1_block_1764253596.467756.evalset_result.json  sub_agents_level1_retrieve_answer_1759356345.1789398.evalset_result.json
ctf/config/: aws-config.json
ctf/frontend/: app.py  main.py  utils.py
ctf/frontend/routes/: challenges.py  chat.py
ctf/frontend/templates/: base.html  challenges.html  challenges_page.html  chat_page.html  faq.html  faq_page.html  leaderboard.html  leaderboard_page.html  register.html  register_error.html  register_page.html  register_success.html  root.html
ctf/frontend/templates/chat_components/: auto_fill_chat.html  chat_history.html  chat_history_loader.html  chat_screen.html  suggestion_chatbox.html
ctf/frontend/templates/levels/: chat_history.html  chat_history_loader.html  chat_screen.html  generic_level.html  htmx_level_0.html  htmx_level_1.html  suggestion_audio_chatbox.html  suggestion_chatbox.html  suggestion_image_chatbox.html
ctf/lancedb/ctf_levels.lance/_transactions/: 0-f22d22c1-f274-4ff3-a5e8-8117410b4e2b.txn
ctf/lancedb/ctf_levels.lance/_versions/: 1.manifest
ctf/llm_guard/: __init__.py  llm_guard.py  protections.py  search.py  system_prompt.py
ctf/llm_training/: pyproject.toml
ctf/multi_tool_agent/: agent.py
ctf/rag/: search.py  system_prompt.py
ctf/routes/: challenges.py  chat.py
ctf/static/assets/css/: pwngpt.css
ctf/templates/: base.html  challenges.html  faq.html  generic_level.html  generic_level_htmx.html  root.html
ctf/templates/levels/: auto_fill_chat.html  chat_history.html  generic_level.html  htmx_level_0.html  htmx_level_1.html  htmx_level_10.html  htmx_level_2.html  htmx_level_3.html  htmx_level_4.html  htmx_level_5.html  htmx_level_6.html  htmx_level_7.html  htmx_level_8.html  htmx_level_9.html  suggestion_audio_chatbox.html  suggestion_chatbox.html  suggestion_image_chatbox.html
ctf/tests/: __init__.py  test_app.py  test_leaderboard.py  test_utils.py  test_vals.py
ctf/tests/eval/: README.md  __init__.py  test_agents.py
ctf/tests/llm_guard/: test_protections.py
database/: db.py  leaderboard.py  schemas.py  users.py
llm_guard/: llm_guard.py  protections.py  search.py  system_prompt.py
llm_training/: Prompt_Injection_distilbert_finetune-Copy1.ipynb  Prompt_Injection_distilbert_finetune.ipynb  prompt_injection_classification.ipynb  pyproject.toml  test.py
llm_training/test.csv/: state.json  test.arrow
llm_training/train.csv/: data-00000-of-00001.arrow  dataset_info.json  state.json
passwords/1/: password.txt
passwords/2/: password.txt
passwords/3/: password.txt
passwords/4/: password.txt
passwords/5/: password.txt
passwords/6/: password.txt
routes/: auth.py  challenges.py  chat.py
scripts/: fix_null_simple.sql  fix_null_values.sql  generate_audio.py  migrate_events_table.py  migrate_events_table.sql  test_adk_concurrency.py
static/assets/css/: fontawesome-all.min.css  main.css  pwngpt.css
static/assets/sass/: main.scss
templates/: base.html  complete.html  faq.html  generic_level.html  generic_level_htmx.html  leaderboard.html  leaderboard_table.html  level1.html  level2.html  level3.html  level4.html  level5.html  login.html  old_base.html  photo_level.html  root.html  signup.html  start.html
templates/levels/: htmx_level_0.html  htmx_level_1.html  htmx_level_2.html  htmx_level_3.html  htmx_level_6.html  suggestion_chatbox.html
tests/: __init__.py  test_app.py  test_protections.py  test_utils.py
tests/llm_guard/: test_protections.py
(+1 files in other folders)
