[tool.poetry]
name = "ai-prompt-ctf"
version = "0.1.0"
description = ""
authors = ["Christo Goosen <christogoosen@gmail.com>"]
readme = "README.md"
#packages = [{include = "llm-ctf"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "0.115.12"
pydantic-settings = "^2.0.3"
jinja2 = "^3.1.5"
python-multipart = "^0.0.18"
python-dotenv = "^1.1.0"
clean-text = "^0.6.0"
unidecode = "^1.3.7"
openai = "^1.1.1"
bandit = "^1.7.5"
gunicorn = "23.0.0"
chromadb = "^0.5.7"
jinja-markdown = "^1.210911"
slowapi = "^0.1.9"
certifi = "^2025.1.31 "
openai-agents = "^0.0.7"
transformers = "^4.51.0"
nest-asyncio = "^1.6.0"
torch = "^2.6.0"
accelerate = "^1.6.0"


[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.7"
pytest = "^8.3.5"
importanize = "^0.7.0"
memory-profiler = "^0.61.0"
black = {extras = ["jupyter"], version = "^25.1.0"}
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"
bandit = "^1.8.3"
pytest-cov = "^4.1.0"
uvicorn = "^0.34.0"
setuptools = "^70.0.0"
huggingface-hub = "0.30.1"
pytest-asyncio = "^0.24.0"
djlint = "^1.36.1"
anyio = "^4.6.2.post1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ["py311"]

[tool.djlint]
exclude=".venv,venv,.tox,.eggs,..."
ignore="H006,H013,H021"



