[project]
name = "ai-prompt-ctf"
version = "0.2.0"
description = ""
authors = [{ name = "Christo Goosen", email = "christogoosen@gmail.com" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
    "fastapi==0.122.0",
    "pydantic-settings>=2.0.3,<3",
    "jinja2>=3.1.5,<4",
    "python-multipart>=0.0.18,<0.0.21",
    "python-dotenv>=1.1.0,<2",
    "clean-text>=0.6.0,<0.7",
    "unidecode>=1.3.7,<2",
    "openai>=1.1.1,<2",
    "bandit>=1.7.5,<2",
    "gunicorn==23.0.0",
    "jinja-markdown~=1.210911",
    "slowapi>=0.1.9,<0.2",
    "certifi>=2025.1.31,<2026",
    "transformers>=4.51.0,<5",
    "nest-asyncio>=1.6.0,<2",
    "torch>=2.6.0,<3",
    "accelerate>=1.6.0,<2",
    "ollama>=0.4.7,<0.5",
    "google-adk[eval]>=0.2.0",
    "litellm>=1.77.5",
    "httpx>=0.28.1",
    "lancedb>=0.25.2",
    "sqlalchemy>=2.0.36,<3",
    "llm-guard>=0.3.16",
    "markdown>=3.10",
    "requests>=2.32.0",
    "html-to-markdown>=0.1.0",
    "html2markdown>=0.1.7",
    "psycopg2-binary>=2.9.11",
    "duckduckgo-search>=8.1.1",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.7,<0.0.8",
    "pytest>=8.3.5,<9",
    "importanize>=0.7.0,<0.8",
    "memory-profiler>=0.61.0,<0.62",
    "black[jupyter]>=25.1.0,<26",
    "flake8>=6.1.0,<7",
    "flake8-bugbear>=23.12.2,<24",
    "bandit>=1.8.3,<2",
    "pytest-cov>=4.1.0,<5",
    "uvicorn>=0.34.0,<0.35",
    "setuptools>=70.0.0,<71",
    "huggingface-hub==0.35.3",
    "pytest-asyncio>=0.24.0,<0.25",
    "djlint>=1.36.1,<2",
    "anyio>=4.6.2.post1,<5",
    "vulture>=2.14",
    "deadcode>=2.4.1",
]

[tool.black]
line-length = 80
target-version = ["py311"]

[tool.djlint]
exclude=".venv,venv,.tox,.eggs,..."
ignore="H006,H013,H021"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "adk_api: marks tests that require ADK API server running",
]
addopts = "-m \"not adk_api\" --tb=short"



